--- a/practica7/estilo.css
+++ b/practica7/estilo.css
@@ -6,9 +6,9 @@ canvas
     right: 0px; 
     bottom: 0px; 
     margin: auto; 
-    background-color: white;
+    background-color: lightgray;
 }
 body
 {
-    background-color: lightcoral;
+    background-color: rgb(45, 42, 42);
 }
