Pelota se bibuja, al igual que los ladrillos, el desplazamiento de la barra con las teclas funciona

--- a/practica8/estilo.css
+++ b/practica8/estilo.css
@@ -6,7 +6,7 @@ canvas
     right: 0px; 
     bottom: 0px; 
     margin: auto; 
-    background-color: lightgray;
+    background-color: #839192;
 }
 body
 {
