--- a/practica8/estilo.css
+++ b/practica8/estilo.css
@@ -6,7 +6,7 @@ canvas
     right: 0px; 
     bottom: 0px; 
     margin: auto; 
-    background-color: #839192;
+    background-color: whitesmoke;
 }
 body
 {
