--- a/donacion/cliente/src/app/components/main/main.component.html
+++ b/donacion/cliente/src/app/components/main/main.component.html
@@ -1,1 +1,32 @@
-<p>main works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="main.component.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <div class="tutorial">
+          <ul>
+            <li>Registro donador</li>
+            <li>Registro paciente</li>
+            <li>Solicitudes<i class="fa fa-angle-down"></i>
+              <ul>
+                <li>Solicitud de sangre</li>
+              </ul>
+            </li>
+            <li>Contacto</li>
+          </ul>
+          <div class="slider"></div>
+          <div class="information">
+            <p>Menu para seleccionar las diferentes tareas</p>
+          </div>
+        </div>
+      </div>
+      <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+</body>
+</html>
