Se puede utilizar el eliminar, solicitud, paciente, donadores, funciona, falta por implementar el insertar en todas

--- a/donacion/cliente/src/app/components/donadores/donadores.component.html
+++ b/donacion/cliente/src/app/components/donadores/donadores.component.html
@@ -1,1 +1,33 @@
-<p>donadores works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Registo de donadores</title>
+</head>
+<body>
+    <table class="styled-table" align="center" style="margin: 0px auto;">
+        <thead>
+            <h2>Donadores</h2>
+        </thead>
+        <tbody>
+            <tr>
+                <th>Id donador</th>
+                <th>Tipo de sangre</th>
+                <th>Id persona</th>
+                <th>Acciones </th>
+            </tr>
+            <tr class="active-row" *ngFor="let donador of donador">
+                <td>{{donador.iddonador}}</td>
+                <td>{{donador.tipodesangre}}</td>
+                <td>{{donador.idpersona}}</td>
+                <td><a><i class="material-icons prefix" (click)="eliminarDonador(donador.iddonador)">delete_forever</i></a>
+                    <a><i class="material-icons prefix">remove_red_eye</i></a>
+                    <a><i class="material-icons prefix">edit</i></a></td>  
+            </tr>
+        </tbody>
+    </table>
+</body>
+</html>
