--- a/donacion/cliente/src/app/components/login/login.component.css
+++ b/donacion/cliente/src/app/components/login/login.component.css
@@ -40,7 +40,7 @@
     font-size: 0.875rem;
     color: #ffffff;
     font-weight: bold;
-    background-color: #bcd8c1;
+    background-color: #E74C3C ;
     width: 100%;
     display: block;
     padding: 0.875rem 1rem;
