--- a/donacion/cliente/src/app/components/main/main.component.css
+++ b/donacion/cliente/src/app/components/main/main.component.css
@@ -9,7 +9,7 @@
 body,
 html {
   height: 100%;
-  background-color: #eeeeee;
+  background-color: #F8F9F9 ;
 }
 
 .container {
@@ -18,7 +18,7 @@ html {
 }
 
 .tutorial {
-  width: 80%;
+  width: 90%;
   margin: 5% auto 0 auto;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   background-color: #f9f9f9;
