Avance del proyecto, falta bastante, correciones y falta la parte del administrador

--- a/donacion/cliente/src/app/components/login/login.component.html
+++ b/donacion/cliente/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
     <div class="login">
         <form class="custom-form" method="post">
             <h1>Iniciar Sesión</h1>
-            <input [(ngModel)]="enfermera.numero_trabajador" type="number" name="numerp_trabajador" id="numero_trabajador_input" placeholder="numero_trabajador" autocomplete="off">
+            <input [(ngModel)]="enfermera.numero_trabajador" type="number" name="numerodetrabajador" id="numero_trabajador_input" placeholder="numero_trabajador" autocomplete="off">
             <input  [(ngModel)]="enfermera.password" type="password" name="password" id="password" placeholder="password" autocomplete="off">
             <button type="submit" (click)="verificarEnfermera()">LOGIN</button>
         </form>
