--- a/donacion/cliente/src/app/components/login/login.component.css
+++ b/donacion/cliente/src/app/components/login/login.component.css
@@ -11,8 +11,8 @@
     margin: 0;
     padding: 0;
   }.custom-form {
-    min-width: 300px;
-    max-width: 60%;
+    min-width: 200px;
+    max-width: 40%;
     margin: 0px auto;
     background: rgba(255, 255, 255, 0.15);
     padding: 2rem 3rem;
@@ -40,7 +40,7 @@
     font-size: 0.875rem;
     color: #ffffff;
     font-weight: bold;
-    background-color: #E74C3C ;
+    background-color: #16A085 ;
     width: 100%;
     display: block;
     padding: 0.875rem 1rem;
