--- a/donacion/cliente/src/app/components/main/main.component.css
+++ b/donacion/cliente/src/app/components/main/main.component.css
@@ -22,12 +22,12 @@ html {
   margin: 5% auto 0 auto;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   background-color: #f9f9f9;
-  max-width: 800px;
+  
 }
 .tutorial .slider {
   width: 100%;
-  height: 300px;
-  background-color: #f03861;
+  height: 600px;
+  background-color: #000000;
 }
 .tutorial .information {
   width: 100%;
